src/test/ui/macros/span-covering-argument-1.stderr
error[E0596]: cannot borrow immutable local variable `foo` as mutable
  --> $DIR/span-covering-argument-1.rs:15:19
   |
LL |             let $s = 0;
   |                 -- consider changing this to `mut $s`
LL |             *&mut $s = 0;
   |                   ^^ cannot borrow mutably
...
LL |     bad!(foo whatever);
   |     ------------------- in this macro invocation

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0596"
